--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="top-bg"></div>
     <div class="bottom-bg"></div>
     <div class="card">
-    <img src="/images/bg-pattern-card.svg" alt="bg-pattern-card" class="bg-pattern-card">
-    <img src="/images/avatar.png" alt="avatar" class="avatar">
+    <img src="./images/bg-pattern-card.svg" alt="bg-pattern-card" class="bg-pattern-card">
+    <img src="./images/avatar.png" alt="avatar" class="avatar">
     <p class="name">Yahya Duski <span class="age">16</span></p>
     <p class="country">Kurdistan</p>
     <hr>
